# pulsar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MCP_INTEGRATION.md  Pulsar.spec  README.md  SECURITY.md  ThonnyV2Debug.spec  build.py  build_pyinstaller.py  create_logo.py  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/common/: Button.tsx  Modal.tsx  Tooltip.tsx
frontend/src/config/: terminal.ts
frontend/src/hooks/: useDevices.ts  useKeyboardShortcuts.ts  useWebSocket.ts
frontend/src/services/: api.ts  lsp.ts  websocket.ts
frontend/src/stores/: consoleStore.ts  deviceStore.ts  layoutStore.ts  settingsStore.ts
frontend/src/styles/: globals.css
src/: __init__.py  main.py
src/core/: __init__.py  app.py  config.py  events.py
src/lsp/: __init__.py  manager.py  protocol.py
src/mcp_impl/: __init__.py  config_generator.py  server.py  tools.py
src/serial_comm/: __init__.py  device.py  discovery.py  file_transfer.py  manager.py  repl.py
src/server/: __init__.py  api.py  websocket.py
src/tools/: __init__.py  flasher.py  lib_manager.py  sync.py  wifi.py
src/ui/: __init__.py  window.py
stubs/: pyrightconfig.json
stubs/micropython/: ads1115.pyi  ahtx0.pyi  bluetooth.pyi  bme280.pyi  builtins.pyi  dht.pyi  ds18x20.pyi  ds3231.pyi  esp.pyi  esp32.pyi  espnow.pyi  framebuf.pyi  gc.pyi  hcsr04.pyi  ili9341.pyi  machine.pyi  max7219.pyi  microdot.pyi  micropython.pyi  mpu6050.pyi  neopixel.pyi  network.pyi  ntptime.pyi  onewire.pyi  pca9685.pyi  sdcard.pyi  sh1106.pyi  ssd1306.pyi  st7789.pyi  stepper.pyi  uasyncio.pyi  ubinascii.pyi  ucollections.pyi  ucryptolib.pyi  uhashlib.pyi  uio.pyi  ujson.pyi  ulogging.pyi  uos.pyi  urandom.pyi  (+7 more)
stubs/micropython/umqtt/: __init__.pyi  robust.pyi  simple.pyi
(+23 files in other folders)
